# diffbot-ros2

./: .gitignore  AGENTS.md  LICENSE  README.md  agent_redeploy.zsh  agent_stop.zsh  redeploy.sh  redeploy.zsh  start.sh  start.zsh  tee_redeploy.sh  tee_redeploy.zsh
cad/: Battery Pack Spacer.FCStd  Engine Compartment.FCStd  Lid.FCStd  Main Compartment.FCStd  Wheel Mount.FCStd
embedded/: 99-ros.rules  apply-udev-rules.sh  imu-encoder-node-redeploy.sh  motor-controller-redeploy.sh
embedded/imu-encoder-node/: imu-encoder-node.ino
embedded/motor-controller/: motor-controller.ino
robot_specifications/: diffbot.txt
ros2_ws/: CMakeLists.txt  build.sh  diffbot.xml  package.xml  redeploy.sh  redeploy_log.sh  start.sh  tee_redeploy.sh
ros2_ws/bringup/behavior_trees/: navigate_through_poses_wait_for_icp_odom.xml  navigate_to_pose_wait_for_icp_odom.xml
ros2_ws/bringup/config/: diffbot_controllers.yaml  ekf.yaml  external_imu_filter.yaml  imu_filter.yaml  mapper_params_online_sync.yaml  nav2_params.yaml  realsense_params.yaml
ros2_ws/bringup/launch/: diffbot.launch.py  navigation_launch.py
ros2_ws/description/ros2_control/: diffbot.ros2_control.xacro
ros2_ws/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
ros2_ws/hardware/: diffbot_system.cpp
ros2_ws/hardware/include/diffbot/: diffbot_system.hpp
ros2_ws/scripts/: enable_camera_pointcloud
ros2_ws/src/: icp_odom_reweighter.cpp  lidar_standby_manager.cpp  semantic_export.cpp  wait_for_fresh_odom_bt_node.cpp
scripts/: analyze_slam.py  analyze_yaw_drift.py  nav_record.py  nav_replay.py  record_semantic_bag.sh  route.yaml  rplidar_motor.py  serial_wasd_teleop.py  test_imu_encoder_node.py  test_motor_controller.py
